--- a/app.css
+++ b/app.css
@@ -1,24 +1,26 @@
-body {
-  background-color: rgba(145, 250, 250, 0.808);
+#bdy {
+  background-color: rgba(186, 245, 245, 0.315);
 }
 
-h1 {
+#heading {
+  color: black;
+  font-weight: 400;
   display: flex;
   justify-content: center;
-  margin-top: 0;
+  margin-bottom: 5%;
 }
 
-.container {
+.main {
   margin: auto;
   margin-top: 5%;
   height: 500px;
-  width: 30%;
+  width: 40%;
   border: 3px solid rgba(0, 0, 0, 0.308);
   border-radius: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgba(128, 128, 128, 0.267);
+  background-color: rgba(160, 158, 158, 0.678);
 }
 
 .btns {
@@ -27,8 +29,15 @@ h1 {
   justify-content: space-evenly;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1252px) {
   .btns {
     flex-direction: column;
   }
+}
+
+/* To remove the annoying arrows/spinners */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
